applets/weather: Fix config save

Move the call to setDefaultUnits() from the constructor to init()

setDefaulktUnits() accesses config() which is forbidden to access
from the Applet constructor, as at that point the applet is not
in the containment/corona hyerarchy yet and can't find the proper place
in the config file.
When this happens, the applet will start to read/write in plasmarc itself
so it won't even be saved in the appletsrc layout

BUG:501066