applets/weather/weatherapplet.h
@@ -24,6 +24,7 @@ class WeatherApplet : public Plasma::Applet, public Plasma5Support::DataEngineCo
 public:
     WeatherApplet(QObject *parent, const KPluginMetaData &data, const QVariantList &args);
     ~WeatherApplet() override;
+    void init() override;
 
 Q_SIGNALS:
     void needsToBeSquareChanged();
